--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
 
 <body>
     <div class="container">
-        <h1>Hello Everyone, this is my Two Tier FlaskApp  
+        <h1>Hello Everyone, this is my Two Tier FlaskApp with docker-compose 
         </h1>
         {% for message in messages %}
             <p>{{ message[0] }}</p>
